# openHPSDR

./: README  README.md
beta/openhpsr-e-wireshark-plugin-0.0.1/: openhpsr-e-wireshark-plugin-0.0.1.tgz
beta/openhpsr-e-wireshark-plugin-0.0.2/: openhpdsr-e-wireshark-plugin-0.0.2.tgz
beta/openhpsr-e-wireshark-plugin-0.0.2/built-binaries/: openhpsdr-e-wireshark-plugin-0.0.2-linux_x86-64_ELF-LSB.tgz
beta/openhpsr-e-wireshark-plugin-0.0.3/: openhpsdr-e-wireshark-plugin-0.0.3.tgz
beta/openhpsr-e-wireshark-plugin-0.0.3/built-binaries/: openhpsdr-e-0.0.3-linux_x86-64_ELF-LSB.tgz
openhpsr-e-wireshark-plugin-0.0.1/built-binaries/openhpsdr-e-0.0.1-linux_x86-64_ELF-LSB/: openhpsdr.la
openhpsr-e-wireshark-plugin-0.0.1/src/openhpsdr/: Makefile.am  Makefile.nmake  moduleinfo.h
source/: CMakeLists.txt  COMPILE.txt  ChangeLog  README.txt  moduleinfo.h  packet-openhpsdr.c  plugin.c
source/openhpsdr-e/: CMakeLists.txt  ChangeLog  INSTALL  README  packet-openhpsdr-e.c  packet-openhpsdr-e.h
source/openhpsdr_e/: CMakeLists.txt  ChangeLog  INSTALL  README  packet_openhpsdr_e.c  packet_openhpsdr_e.h
source/openhpsr-e-wireshark-plugin-0.0.1/: INSTALL
source/openhpsr-e-wireshark-plugin-0.0.3/: README
source/openhpsr-e-wireshark-plugin-0.0.3/openhpsdr/: CMakeLists.txt  ChangeLog  Custom.make  Custom.nmake  moduleinfo.h  moduleinfo.nmake  packet-openhpsdr.c
source/openhpsr-e-wireshark-plugin-0.0.4/: INSTALL  README
source/openhpsr-e-wireshark-plugin-0.0.4/openhpsdr/: CMakeLists.txt  ChangeLog  Makefile.am  (+5 more)
source/openhpsr-e-wireshark-plugin-0.0.5/: INSTALL  README
(+24 files in other folders)
